Avoid environment select to be too wide in simple tab

--- a/jupyterhub_moss/form/option_form.css
+++ b/jupyterhub_moss/form/option_form.css
@@ -57,6 +57,7 @@
 
 #environment_simple {
   text-overflow: ellipsis;
+  max-width: 20em;
 }
 
 .form-container {
